Sat Oct  5 11:29:48 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (generate_makefile): Put BUILT_SOURCES onto @all if
	appropriate.
	(handle_source_transform): Error if discovered source file is
	mentioned.
	(do_one_merge_target): Move all-vs-check test here.

	* m4/obstack.m4: New file.
	* m4/error.m4: New file.

	* automake.in (scan_configure): Support AM_FUNC_MKTIME,
	AM_FUNC_ERROR_AT_LINE, AM_FUNC_OBSTACK.

	* texinfo.tex: New version from texinfo 3.9.

	* automake.in (handle_yacc_lex_cxx): Updated for new ylwrap.
	Also, handle y.tab.h file when "yacc -d" is used.
	(do_one_merge_target): Use pretty_print_rule.

	* ylwrap: Changed usage.

	* m4/mktime.m4: New file.

	* m4: Renamed all .m4 files to fit into 14-char limits.

	* m4/Makefile.am (EXTRA_DIST): New macro.

	* aclocal.in ($ac_defun_rx, %map, %file_contents): New globals.
	(scan_m4_files): Use $ac_defun_rx.
	(add_file): Ditto.
	Run scan_m4_files.
	(scan_configure): Scan acinclude.m4 before anything else.
	(scan_file): New sub.
	(check_acinclude): New sub.
	(add_file): Rewrote.

	* progs-clean.am, progs.am: Renamed from programs-clean.am,
	programs.am.
	* libs-clean.am, libs.am: Renamed from libraries-clean.am,
	libraries.am.
	* texi-vars: Renamed from texinfos-vars.am.
	* comp-vars.am: Renamed from compile-vars.am.
	* texi-vers.am: Renamed from texi-version.am.

	* automake.in (require_file_internal): Give error if symlink can't
	be made.
	(require_config_file): Error message references configure.in.
	(handle_yacc_lex_cxx): Fix order of arguments to ylwrap; from
	Joerg-Martin Schwarz.
	(handle_texinfo): Use texi-vers, not texi-version.
	(get_object_extension): Use comp-vars, not compile-vars.
	(handle_texinfo): Use texi-vars, not texinfos-vars.
	(handle_libraries): Use `libs' prefix, not `libraries'.
	(handle_programs): Use `progs' prefix, not `programs'.

Fri Oct  4 01:14:08 1996  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (scan_m4_files): New sub.
