@@ -20,7 +20,7 @@ $(srcdir)/Makefile.in: @MAINT@Makefile.am configure.in
 
 # For an explanation of the following Makefile rules, see node
 # `Automatic Remaking' in GNU Autoconf documentation.
-Makefile: Makefile.in config.status
+Makefile: $(srcdir)/Makefile.in config.status
 	CONFIG_FILES=$@ CONFIG_HEADERS= ./config.status
 config.status: configure
 	./config.status --recheck
