@@ -1,3 +1,9 @@
+Sun Oct  6 00:43:01 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* remake.am (Makefile): Depend on $(srcdir)/Makefile.in, to work
+	around broken makes.  From David A. Swierczek.
+	* remake-subd.am (Makefile): Ditto.
+
 Sat Oct  5 11:29:48 1996  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (generate_makefile): Put BUILT_SOURCES onto @all if
